# DoxyDocHub

./: .gitignore  InitEnv.py  LICENSE  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
src/DoxyDocHub/: __init__.py  __main__.py  cli.py  server.py  server_config.py  server_data.py
src/doxydochub/: __init__.py  cli.py
src/doxydochub/api/: doxydochubapi.py
src/doxydochub/api/endpoints/: config_apiendpoint.py  projects_apiendpoint.py  versions_apiendpoint.py
src/doxydochub/database/: database.py  database_schema.py
src/doxydochub/database/migrations/: alembic.ini  env.py
src/doxydochub/database/migrations/versions/: 1902963db06f_initial_schema.py  69245f7782ad_projectversion_storage_path_nullable.py  74896cfbddf5_added_slugs_for_project_name_and_.py  7cb784a5631f_initial_schema.py
src/doxydochub/server/: __init__.py  server.py  server_config.py
src/doxydochub/server/static/: style.css  tree.js
src/doxydochub/server/templates/: index.html  info.html
test/: test_cli.py  test_config_apiendpoint.py  test_database.py  test_doxydochubapi.py  test_projects_apiendpoint.py  test_server.py  test_server_config.py  test_server_data.py  test_versions_apiendpoint.py
tools/: new_database_revision.py
