[project]
name = "doxydochub"
description = "Python-based Doxygen documentation hosting solution"
authors = [{ name = "Nils Weyand", email = "nils@weyand-web.de" }]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "flask>=3.1.0",
    "click>=8.1",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
]

dynamic = ["version"]

# Optional metadata
keywords = ["doxygen", "documentation", "hosting", "webserver"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/slinred/doxydochub"
Issues = "https://github.com/slinred/doxydochub/issues"

[project.scripts]
doxydochub = "doxydochub.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.dynamic]
version = { attr = "doxydochub.__version__" }

[tool.setuptools.package-data]
doxydochub = [
    "database/migrations/**/*",
    "server/templates/**/*",
    "server/static/**/*",
]

[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"
